[call-me] - add endpoint to list all connected users available to be called
